style.css
html, body {
  margin: 0;
  background: aquamarine;
  height: 100%;
  font-family: "Lexend", sans-serif;
  display: flex;
  justify-content: center;
}

main {
  width: 100%;
  max-width: 375px;
  padding: 16px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 12px;
  min-height: 100vh;
  margin:10px;
}


h1 {
  color: #F8629C;
  text-align: center;
  font-family: Coiny;
  margin: 0;
  letter-spacing: 1px;
  text-shadow: 2px 2px 0px black;
}

body, input, button, textarea {
  font-family: "Lexend", sans-serif;
  font-size:20px;
  color: black;          
  text-decoration: none;
  -webkit-text-fill-color: black; 
}

#word-container {
  display: flex;
  align-items: stretch;
}

#word-input {
  flex: 1;
  padding: 10px;
  font-weight: 600;
  border: 2px solid #F8629C;
  border-radius: 10px 0 0 10px;
  outline: none;
  background: white;
  max-width:200px;
  color: grey; 
}

#speak-word {
  padding: 10px 16px;
  background: #F8629C;
  border: none;
  border-radius: 0 10px 10px 0;
  cursor: pointer;
  font-weight: bold;
}


#get-definition {
  flex: 1;
  margin-top: 8px;
  padding: 10px 16px;
  background: #F8629C;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  font-weight: bold;
}


#definition-box {
  margin-top: 12px;
  min-height: 100px;
  padding: 12px;
  background: white;
  border: 2px solid #F8629C;
  border-radius: 10px;
  overflow-y: auto;
  box-sizing: border-box;
}


#speak-definition {
  flex: 1;
  margin-top: 6px;
  padding: 10px 16px;
  background: #F8629C;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  font-weight: bold;
}

